library/general/requiredprobes/example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: nginx-1
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /tmp/cache
          name: cache-volume
      - name: tomcat
        image: tomcat
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: cache-volume
        emptyDir: {}
