library/general/requiredprobes/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: must-have-probes
spec:
  match:
    kinds:
      - apiGroups: ["apps", "extensions", ""]
        kinds: ["Deployment", "ReplicaSet", "DaemonSet", "StatefulSet", "Pod"]
  parameters:
    probes: ["readinessProbe", "livenessProbe"]
